# polsartools

./: .gitignore  .readthedocs.yaml  2.12  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  dev_requirements.txt  env-template.yml  meta  polsartools-dev.yml  polsartools-env.yml  pyproject.toml  references.md  requirements.txt  setup.cfg  setup.py  tempCodeRunnerFile.shellscript
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  draft-pdf.yml  (+2 more)
conda-recipe/: conda_build_config.yaml  meta.yaml
docs/: index.rst  requirements.txt
examples/: Chandrayaan_II_DFSAR_FP.ipynb  NISAR_RSLC_C2.ipynb  README.md  UAVSAR_GRD_pol_decompositions  UAVSAR_Pol_decompositions_GRD.ipynb  example_usage.py
polsartools/: .gitignore  __init__.py  __version__.py  convert.py  cprvicpp.cp312-win_amd64.pyd  cprvicpp.cp38-win32.pyd  cprvicpp.cp38-win_amd64.pyd  dopfp.py  grvi.py  mf3cf.py  mf4cf.py  moving_average.cp312-win_amd64.pyd  refined_lee.cp312-win_amd64.pyd  rflee.cp312-win_amd64.pyd  rflee.cp38-win_amd64.pyd  rflee.cp39-win_amd64.pyd  sum_arrays.cp312-win_amd64.pyd
polsartools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
polsartools/cpp/: CMakeLists.txt  Doxyfile.ini
polsartools/cpp/src/: fp_template.cpp
tests/: basic_functions_v0.py  basic_functions_v1.py  basic_functions_v2.py  basic_functions_v3.py  dir_tree.py  test_functions.py  test_processing.py  testcpp.py  testcpp_cprvi.py  tests.py  todo.txt
wheelhouse/: polsartools-0.6.1-cp38-cp38-win32.whl  polsartools-0.6.1-cp38-cp38-win_amd64.whl
(+249 files in other folders)
