[metadata]
name = polsartools
version = 0.1.1
author = Narayanarao Bhogapurapu
author_email = bnarayanarao@iitb.ac.in
description = A package to process Synthetic Aperture Radar data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Narayana-Rao/polsartools
project_urls =
    Bug Tracker = https://github.com/Narayana-Rao/polsartools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
